--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,29 @@
 <resources>
     <string name="app_name">Scope Adjustment Calculator</string>
-    <string name="distance_to_target_m">Distance to Target (m)</string>
+    <string name="distance_to_target">Distance to Target</string>
     <string name="enter_distance_to_target">Enter Distance to Target</string>
-    <string name="distance_to_move_impacts_mm">Distance to Move Impacts (mm)</string>
+    <string name="distance_to_move_impacts">Distance to Move Impacts</string>
     <string name="enter_distance_to_move_impacts">Enter Distance to Move Impacts</string>
     <string name="scope_adjustment_clicks">Scope Adjustment Clicks</string>
+    <string name="build_number">Build v0.04</string>
+
     <string-array name="adjustment_options">
         <item>1/4 MoA</item>
         <item>1/2 MoA</item>
         <item>1 MoA</item>
         <item>0.1 MRAD</item>
         <item>0.1 MIL</item>
+    </string-array>
+
+    <string-array name="distance_unit_options">
+        <item>Meters</item>
+        <item>Yards</item>
+        <item>Feet</item>
+    </string-array>
+
+    <string-array name="impact_unit_options">
+        <item>Millimeters</item>
+        <item>Centimeters</item>
+        <item>Inches</item>
     </string-array>
 </resources>
