--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="enter_distance_to_move_impacts">Enter Distance to Move Impacts</string>
     <string name="scope_adjustment_clicks">Scope Adjustment Clicks</string>
     <string name="build_number">Build v0.04</string>
+    <string name="Ossey">Ossey Studios</string>
 
     <string-array name="adjustment_options">
         <item>1/4 MoA</item>
